#--------------------------------------------------------------------------
# File and Version Information:
#  $Id$
#
# Description:
#  ChangeLog file for package psddl_hdf2psana
#------------------------------------------------------------------------

Package author: Andy Salnikov

Please describe any modifications that you made to the package in the
reverse time order.

Tag: V00-09-14
2014-10-03 David Schneider
- regenerate for new pdsdata 8.1.4/psddldata with:
  Evr::IOConfigV2. Track JIRA issue PSAS-41

Tag: V00-09-13
2014-09-18 David Schneider
- regenerate for new pdsdata 8.1.3/psddldata with:
  TimeTool::ConfigV1, TimeTool::DataV1, L3T::DataV2, GenericPgp::ConfigV1
- added schema's for TimeTool and GenerigPgp classes. In timetool-h5.ddl
  Note use of [[vlen]] for basename string, and [[zero_len]] for TimeTool 
  data where projection array can be zero len.
	
Tag: V00-09-12
2014-07-03 David Schneider
- regenerate for new pdsdata/psddldata with BldEBeamV6

Tag: V00-09-11
2014-06-14 David Schneider
- regenerate whole thing from psddldata V01-00-10
- trac ticket #309

Tag: V00-09-10
2014-06-11 David Schneider
- switch to direct hdf5 calls to read string attribute
  concerned prior code had memory bug with read in data
	
Tag: V00-09-09 
2014-06-10 David Schneider
- convert fixed and vlen ndarrays in hdf5 files into the event store.
- refactor with Translator package
  move Translator NDArrayParameters class here
- add schema constants that are shared between both packages
- track ticket  #308 (for reading ndarrays into psana).

Tag: V00-09-08
2014-06-05 David Schneider
- fix trac #305 https://pswww.slac.stanford.edu/trac/psdm/ticket/305
  pass pvname when storing epics pv to deal with pv's having the same
  pvId - right thing to do for psana-translate, should be Ok for
  older o2o-translated files.

Tag: V00-09-07
2014-05-08 David Schneider
- regenerate for psddldata V01-00-09.
- track ticket 300.

Tag: V00-09-06
2014-05-03 David Schneider